# nv-ingest

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.oss-ocr.yaml  docker-compose.yaml
nemo_retriever/: README.md  docker.md  embedding_stage_config.yaml  pyproject.toml  retriever.md
nemo_retriever/developer_docs/: vdb_retrieval_refactor.md
nemo_retriever/docs/cli/: README.md  benchmarking.md  retriever_cli.md
nemo_retriever/examples/: eval_sweep.yaml
nemo_retriever/harness/: HANDOFF.md  test_configs.yaml
nemo_retriever/harness/examples/: managed-helm-nrl-26.05.yaml
nemo_retriever/harness/helm-profiles/: all-optional.yaml  audio-video.yaml  core.yaml  no-nims-external.yaml  split.yaml
nemo_retriever/helm/: Chart.yaml  README.md  values.yaml
nemo_retriever/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-vectordb.yaml  deployment.yaml  hpa.yaml  prometheus-adapter-rules.yaml  secrets.yaml  servicemonitor.yaml
nemo_retriever/helm/templates/nims/: audio.yaml  llama-nemotron-embed-vl-1b-v2.yaml  llama-nemotron-rerank-1b-v2.yaml  nemotron-3-nano-omni-30b-a3b-reasoning.yaml  nemotron-nano-12b-v2-vl.yaml  nemotron-ocr-v1.yaml  nemotron-page-elements-v3.yaml  nemotron-parse.yaml  nemotron-table-structure-v1.yaml
nemo_retriever/src/nemo_retriever/: graph_ingestor.py  ingest-config.yaml  ingest_plans.py  ingestor.py  retriever.py  retriever_graph_utils.py  service_ingestor.py
nemo_retriever/src/nemo_retriever/adapters/cli/: main.py  sdk_workflow.py
nemo_retriever/src/nemo_retriever/audio/: __init__.py  asr_actor.py  chunk_actor.py  cpu_actor.py  gpu_actor.py  media_interface.py  stage.py  transcription_actor.py
nemo_retriever/src/nemo_retriever/caption/: caption.py  model_profiles.py
nemo_retriever/src/nemo_retriever/chart/: chart_detection.py  config.py  cpu_actor.py  gpu_actor.py  shared.py
nemo_retriever/src/nemo_retriever/dedup/: dedup.py
nemo_retriever/src/nemo_retriever/evaluation/: README.md  cli.py  config.py  judging.py  runner.py
nemo_retriever/src/nemo_retriever/examples/: batch_pipeline.py  graph_pipeline.py  inprocess_pipeline.py
nemo_retriever/src/nemo_retriever/graph/: content_transforms.py  executor.py  ingestor_runtime.py  multi_type_extract_operator.py  operator_archetype.py  operator_resolution.py  store_operator.py
nemo_retriever/src/nemo_retriever/harness/: config.py  helm_manager.py  parsers.py  run.py
nemo_retriever/src/nemo_retriever/ingest_modes/: batch.py  fused.py  gpu_pool.py  inprocess.py  online.py
nemo_retriever/src/nemo_retriever/llm/clients/: judge.py
nemo_retriever/src/nemo_retriever/model/: __init__.py  model.py
nemo_retriever/src/nemo_retriever/model/local/: __init__.py  llama_nemotron_embed_1b_v2_embedder.py  nemotron_graphic_elements_v1.py  nemotron_ocr_v1.py  nemotron_ocr_v2.py  nemotron_page_elements_v3.py  nemotron_parse_v1_2.py  nemotron_rerank_v2.py  nemotron_rerank_vl_v2.py  nemotron_rerank_vl_v2_hf.py  nemotron_speech_streaming_asr.py  nemotron_table_structure_v1.py  nemotron_vlm_captioner.py  (+1 more)
nemo_retriever/src/nemo_retriever/nim/: probe.py
nemo_retriever/src/nemo_retriever/observability/: __init__.py  attributes.py  configure.py  propagate.py  ray_integration.py  spans.py  tracer.py
nemo_retriever/src/nemo_retriever/ocr/: ocr.py
nemo_retriever/src/nemo_retriever/page_elements/: cpu_actor.py  page_elements.py
nemo_retriever/src/nemo_retriever/params/: __init__.py  models.py  utils.py
nemo_retriever/src/nemo_retriever/parse/: nemotron_parse.py
nemo_retriever/src/nemo_retriever/pdf/: extract.py  split.py  stage.py
nemo_retriever/src/nemo_retriever/pipeline/: __main__.py  ingest_result.py
nemo_retriever/src/nemo_retriever/recall/: beir.py  core.py
nemo_retriever/src/nemo_retriever/rerank/: rerank.py
nemo_retriever/src/nemo_retriever/service/: app.py  cli.py  client.py  config.py  policy.py  retriever-service.yaml  vectordb_app.py
nemo_retriever/src/nemo_retriever/skill_eval/: cli.py  dataset.py  judging.py  report.py  runner.py  trace_summarizer.py
nemo_retriever/src/nemo_retriever/table/: gpu_actor.py
nemo_retriever/src/nemo_retriever/text_embed/: cpu_operator.py  main_text_embed.py  runtime.py  shared.py  text_embed.py
nemo_retriever/src/nemo_retriever/utils/: audio_io.py  hf_model_registry.py  input_files.py  ray_resource_hueristics.py  trt_utils.py
nemo_retriever/src/nemo_retriever/vdb/: README.md  __init__.py  adt_vdb.py  lancedb.py  operators.py  records.py  sidecar_metadata.py
nemo_retriever/src/nemo_retriever/vector_store/: lancedb_store.py
nemo_retriever/src/nemo_retriever/video/: __init__.py  _content_types.py  advanced_dedup.py  audio_visual_fuser.py  caption_actor.py  frame_actor.py  frame_extract.py  frame_ocr.py  key_frame_select.py  merge_modalities.py  scene_detection.py  split.py  strip_images.py  transcode.py  vlm_captioner.py
nemo_retriever/tests/: __init__.py  conftest.py  test_actor_operators.py  test_asr_actor.py  test_audio_chunk_actor.py  test_audio_pipeline_batch.py  test_audio_stage.py  test_audio_visual_fuser_modes.py  test_batch_pipeline.py  test_beir_evaluation.py  test_caption.py  test_caption_model_profiles.py  test_chart_graphic_elements.py  test_ci_workflows.py  test_container_ffmpeg_install.py  test_create_local_embedder.py  test_graph_pipeline_cli.py  test_graph_video_extract_video.py  test_harness_config.py  test_harness_helm_manager.py  test_harness_helm_profiles.py  test_harness_run.py  test_hf_model_registry.py  test_ingest_interface.py  test_ingest_plans.py  test_ingest_result.py  test_lancedb_row_metadata.py  test_lancedb_streaming_append.py  test_lancedb_write_policy.py  test_llm_params.py  test_media_dependency_availability.py  test_multimodal_embed.py  test_nemotron_ocr_v2_nightly.py  test_nemotron_rerank_v2.py  test_nv_ingest_vdb_operator.py  test_observability.py  test_ocr_version_selection.py  test_operator_flags_and_cpu_actors.py  test_params_models.py  test_params_utils.py  (+42 more)
nemo_retriever/tests/graph/: test_multi_type_grouping.py
nemo_retriever/tests/skill_eval/: test_cli.py
(+208 files in other folders)
